objects/CLMRolloutObjectFields__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked  to consider</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldAPI__c</fullName>
        <label>FieldAPI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldLabel__c</fullName>
        <description>Label of the Field</description>
        <label>FieldLabel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldType__c</fullName>
        <label>FieldType</label>
        <picklist>
            <picklistValues>
                <fullName>REFERENCE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BOOLEAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STRING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PICKLIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATETIME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEXTAREA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOUBLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CURRENCY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PERCENT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ObjectAPI__c</fullName>
        <label>ObjectAPI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CLMRolloutObjectFields</label>
    <pluralLabel>CLMRolloutObjectFields</pluralLabel>
</CustomObject>